fix tailwind css and google fonts

--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TomiStore</title>
-    <!-- SEO Elements -->
-    <meta name="description" content="Discover our wide range of quality products at TomiStore. Shop electronics, fashion, and more with great prices and fast delivery.">
-    <meta name="keywords" content="online store, electronics, fashion, shopping, ecommerce">
-    <meta name="author" content="Tomislav Dukez">
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/images/favicon_io/site.webmanifest">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TomiStore</title>
+  <!-- SEO Elements -->
+  <meta name="description"
+    content="Discover our wide range of quality products at TomiStore. Shop electronics, fashion, and more with great prices and fast delivery.">
+  <meta name="keywords" content="online store, electronics, fashion, shopping, ecommerce">
+  <meta name="author" content="Tomislav Dukez">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="/images/favicon_io/site.webmanifest">
+  <!-- CSS -->
+  <link href="/src/styles.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
