--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io/favicon-16x16.png">
   <link rel="manifest" href="/images/favicon_io/site.webmanifest">
   <!-- CSS -->
-  <link href="/src/styles.css" rel="stylesheet">
+  <link href="/styles.css" rel="stylesheet">
 </head>
 
 <body>
